# Cyonima-code-agent

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  clippy.toml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  models-catalog.toml  models-guide.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: detect_hardware.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/resources/models/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hardware/: mod.rs  vram.rs
src-tauri/src/indexing/: embedder.rs  indexer.rs  mod.rs  search.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/models/: downloader.rs  mod.rs  registry.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  llama_cpp.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/sessions/: agents_md.rs  mod.rs  persistence.rs
src-tauri/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  mod.rs  read_file.rs  semantic_search.rs  write_file.rs
src/components/: DiffViewer.tsx  ModelLoadingScreen.tsx  NewSessionForm.tsx  PermissionDialog.tsx  Sidebar.tsx  StatusBar.tsx  ThemeToggle.tsx
src/lib/: ipc.ts  shortcuts.ts  theme.ts
src/pages/: CatalogView.tsx  ConfigView.tsx  ImportModelView.tsx  OllamaView.tsx  SearchView.tsx  SessionsView.tsx  SettingsView.tsx
src/store/: downloads.ts  sessions.ts
