[package]
name = "cyonima-ia-code-agent"
version = "0.1.0"
description = "Agent IA de code 100% local, gratuit et open source."
authors = ["Cyonima"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cyonima_core"
path = "src/lib.rs"

[[bin]]
name = "cyonima-ia-code-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
async-stream = "0.3"
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
# keyring pour stocker les API keys (DPAPI / Keychain / Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
# Détection hardware pour valider l'éligibilité d'un modèle avant download
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Outils agents
globwalk = "0.9"
regex = "1"
walkdir = "2"

# Détection VRAM GPU (Win32 DXGI). Le windows crate est déjà transitif via
# tauri — on l'ajoute explicitement pour activer la feature.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[features]
# Par défaut on compile avec le backend llama.cpp built-in.
default = ["llama-cpp"]
llama-cpp = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
